--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,11 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">TrashTracker</a>
     </div>
+    {% if page.url != "/login/"  and page.url != "/join/"%}
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#about">+</a></li>
+    </ul>
+    {%endif%}
+    <div>
   </div><!-- /.container-fluid -->
 </nav>
