--- a/css/main.scss
+++ b/css/main.scss
@@ -47,5 +47,7 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "navbar"
+    "base",
+    "layout",
+    "navbar"
 ;
