--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <nav class="navbar">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">TrashTracker</a>
-    </div>
-    {% if page.url != "/login/"  and page.url != "/join/"%}
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#about">+</a></li>
-    </ul>
-    {%endif%}
-    <div>
-  </div><!-- /.container-fluid -->
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">TrashTracker</a>
+        </div>
+        {% if page.url != "/login/"  and page.url != "/join/"%}
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#about">+</a></li>
+        </ul>
+        {%endif%}
+        <div>
+    </div><!-- /.container-fluid -->
 </nav>
