--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand" href="/">TrashTracker</a>
-        </div>
-        {% if page.url != "/login/"  and page.url != "/join/"%}
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">+</a></li>
-        </ul>
+            {% if page.url != "/login/"  and page.url != "/join/"%}
+            <button type="button" class="pull-right btn btn-default navbar-btn">
+               + 
+            </button>
         {%endif%}
+        </div>
         <div>
     </div><!-- /.container-fluid -->
 </nav>
