--- a/_includes/heatmap.html
+++ b/_includes/heatmap.html
@@ -4,10 +4,11 @@ var map, heatmap;
 
 function initMap() {
   map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 16,
     center: {lat: 43.0838822, lng: -77.6759403},
     mapTypeId: google.maps.MapTypeId.HYBRID
   });
+
+  map.fitBounds(new google.maps.LatLngBounds(new google.maps.LatLng(43.08078, -77.68479), new google.maps.LatLng(43.08767, -77.66595))); // SW, NE
 
   heatmap = new google.maps.visualization.HeatmapLayer({
     data: getPoints(),
