Include small heatmap at the top of the feed.

--- a/_includes/heatmap.html
+++ b/_includes/heatmap.html
@@ -17,20 +17,21 @@ function initMap() {
   });
 }
 
-// Heatmap data: 500 Points
+// Heatmap data: 50 Points
 function getPoints() {
   return [
-    new google.maps.LatLng(43.0840324,-77.6755299), new google.maps.LatLng(43.0840559,-77.6756063),
+    new google.maps.LatLng(43.0840324,-77.6755299), 
+    new google.maps.LatLng(43.0840559,-77.6756063),
     new google.maps.LatLng(43.0839589,-77.6756184),
     new google.maps.LatLng(43.0843106,-77.6747051),
     new google.maps.LatLng(43.0843047,-77.6747923),
     new google.maps.LatLng(43.0843096,-77.6747413),
-    new google.maps.LatLng(43.0845985,-77.674394),
+    new google.maps.LatLng(43.0845985,-77.6743940),
     new google.maps.LatLng(43.0843253,-77.6735933),
     new google.maps.LatLng(43.0840941,-77.6728222),
     new google.maps.LatLng(43.0840814,-77.6728584),
     new google.maps.LatLng(43.0841294,-77.6728678),
-    new google.maps.LatLng(43.084097,-77.6729053),
+    new google.maps.LatLng(43.0840970,-77.6729053),
     new google.maps.LatLng(43.0842792,-77.6714475),
     new google.maps.LatLng(43.0842978,-77.6715548),
     new google.maps.LatLng(43.0843635,-77.6707394),
@@ -56,14 +57,14 @@ function getPoints() {
     new google.maps.LatLng(43.0842293,-77.6763131),
     new google.maps.LatLng(43.0842449,-77.6763922),
     new google.maps.LatLng(43.0842254,-77.6763721),
-    new google.maps.LatLng(43.0842489,-77.676989),
+    new google.maps.LatLng(43.0842489,-77.6769890),
     new google.maps.LatLng(43.0838894,-77.6778366),
     new google.maps.LatLng(43.0836964,-77.6796484),
     new google.maps.LatLng(43.0836915,-77.6796296),
     new google.maps.LatLng(43.0836837,-77.6796538),
-    new google.maps.LatLng(43.0836788,-77.679631),
+    new google.maps.LatLng(43.0836788,-77.6796310),
     new google.maps.LatLng(43.0848121,-77.6794754),
-    new google.maps.LatLng(43.085055,-77.67901),
+    new google.maps.LatLng(43.0850550,-77.6790100),
     new google.maps.LatLng(43.0850608,-77.6790302),
     new google.maps.LatLng(43.0850951,-77.6781665),
     new google.maps.LatLng(43.0846524,-77.6774825),
