--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,7 @@
 ---
 @charset "utf-8";
 
-/*
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-    //"base",
-    //"layout",
-    "navbar"
+	"additional"
 ;
-*/
