--- a/_sass/_additional.scss
+++ b/_sass/_additional.scss
@@ -17,3 +17,12 @@
 
 // Padding for the fixed navbar
 body { padding-top: 70px; }
+
+// The camera icon
+.navbar-submit-icon-link {
+	padding: 0 !important;
+	padding-top: 3px !important;
+}
+.navbar-submit-icon {
+	font-size:42px;
+}
