--- a/_sass/_additional.scss
+++ b/_sass/_additional.scss
@@ -19,10 +19,12 @@
 body { padding-top: 70px; }
 
 // The camera icon
-.navbar-submit-icon-link {
-	padding: 0 !important;
-	padding-top: 3px !important;
+.navbar-submit-icon-button {
+    padding-top: 3px;
+    padding-bottom: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .navbar-submit-icon {
-	font-size:42px;
+	font-size: 25px;
 }
