--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
             <a class="navbar-brand" href="/">TrashTracker</a>
         </div>
         <div id="navbar">
+            {% if page.url != "/login/" and page.url != "/join/" %}
             <ul class="nav navbar-nav">
                 <li {% if page.url == "/feed/" %} class="active" {% endif %}>
                     <a href="/feed">Feed</a>
@@ -12,7 +13,6 @@
                     <a href="/profile">Profile</a>
                 </li>
             </ul>
-            {% if page.url != "/login/" and page.url != "/join/" %}
             <ul class="nav navbar-nav navbar-right">
                 <li {% if page.url == "/submit/" %} class="active" {% endif %}>
                     <p class="navbar-btn">
@@ -22,7 +22,16 @@
                     </p>
                 </li>
             </ul>
-            {%endif%}
+            {% else %}
+            <ul class="nav navbar-nav">
+                <li {% if page.url == "/login/" %} class="active" {% endif %}>
+                    <a href="/login">Login</a>
+                </li>
+                <li {% if page.url == "/join/" %} class="active" {% endif %}>
+                    <a href="/join">Join</a>
+                </li>
+            </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
