Internally, "feed" is now "list"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
         <div id="navbar">
             {% if page.url != "/" and page.url != "/join/" %}{% comment %} "/login/" is now "/" {% endcomment %}
             <ul class="nav navbar-nav">
-                <li {% if page.url == "/feed/" %} class="active" {% endif %}>
-                    <a href="/feed">Feed</a>
+                <li {% if page.url == "/list/" %} class="active" {% endif %}>
+                    <a href="/list">Feed</a>
                 </li>
                 <li {% if page.url == "/profile/" %} class="active" {% endif %}>
                     <a href="/profile">Profile</a>
