--- a/_sass/_additional.scss
+++ b/_sass/_additional.scss
@@ -24,6 +24,7 @@ body { padding-top: 70px; }
     padding-bottom: 0px;
     padding-left: 5px;
     padding-right: 5px;
+    margin-right: 5px;
 }
 .navbar-submit-icon {
 	font-size: 25px;
