Add a "Pick up now" link to items that need to be picked up. Fixes #12.

--- a/_includes/trashItem.html
+++ b/_includes/trashItem.html
@@ -4,6 +4,7 @@
         {% if include.later %}
             <div class="alert alert-info">
                 This item needs to be picked up!
+                <strong><a href="/submit">Pick up now!</a></strong>
             </div>
         {% endif %}
         <div class="row">
