Rename to Food from Trash

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
     <link rel="manifest" href="/favicons/manifest.json?v=kPP7w8oB68">
     <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg?v=kPP7w8oB68" color="#00b85c">
     <link rel="shortcut icon" href="/favicons/favicon.ico?v=kPP7w8oB68">
-    <meta name="apple-mobile-web-app-title" content="TrashTracker">
-    <meta name="application-name" content="TrashTracker">
+    <meta name="apple-mobile-web-app-title" content="FoodTracker">
+    <meta name="application-name" content="FoodTracker">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png?v=kPP7w8oB68">
     <meta name="msapplication-config" content="/favicons/browserconfig.xml?v=kPP7w8oB68">
