--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-default">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">TrashTracker</a>
+            <a class="navbar-brand" href="/">Food Tracker</a>
         </div>
         <div id="navbar">
             {% if page.url != "/" and page.url != "/join/" %}{% comment %} "/login/" is now "/" {% endcomment %}
