--- a/_includes/trashItem.html
+++ b/_includes/trashItem.html
@@ -3,8 +3,8 @@
     <div class="panel-body">
         {% if include.later %}
             <div class="alert alert-info">
-                This item needs to be picked up!
-                <strong><a href="/submit">Pick up now!</a></strong>
+                This item needs to be eaten up!
+                <strong><a href="/submit">Eat now!</a></strong>
             </div>
         {% endif %}
         <div class="row">
